# metafield

./: pyproject.toml
src/metafield/: __init__.py  __main__.py  app.py  git_utils.py  nb_depends.py  nb_utils.py
var/: 00.00-sandbox.ipynb
